# AutoScholar

./: .gitignore  README.md  report.md  trials.ipynb
auto_scholar/: pyproject.toml
auto_scholar/chroma_db/: chroma.sqlite3
auto_scholar/knowledge/: user_preference.txt
auto_scholar/src/auto_scholar/: crew.py  main.py
auto_scholar/src/auto_scholar/config/: agents.yaml  tasks.yaml
auto_scholar/src/auto_scholar/tools/: custom_tool.py
chroma_db/: chroma.sqlite3
