[project]
name = "auto_scholar"
version = "0.1.0"
description = "Auto_scholar using crewAI"
authors = [{ name = "Parth Singh", email = "parthsin10@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
auto_scholar = "auto_scholar.main:run"
run_crew = "auto_scholar.main:run"
train = "auto_scholar.main:train"
replay = "auto_scholar.main:replay"
test = "auto_scholar.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
